--- a/css/main.css
+++ b/css/main.css
@@ -2403,6 +2403,49 @@ img{
 	color:var(--primary-color);
 }
 
+
+.risk-management .inner-container .service-block {
+    border-right: 1px solid var(--primary-color);
+    border-bottom: 1px solid var(--primary-color);
+}
+.risk-management .inner-container{
+	border: 1px solid var(--primary-color); border-bottom: 0;
+}
+@media only screen and (max-width: 800px) {
+    .risk-management .inner-container .service-block:nth-child(2n + 1) {
+        border-right: 0 !important
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .risk-management .inner-container .service-block {
+        border-right: none !important;
+        border-bottom: 1px solid var(--primary-color) !important;
+    }
+}
+
+.key-fund-features .inner-box{
+	background-color: var(--primary-color);
+	border-radius: 8px; justify-content: center;
+}
+.key-fund-features .inner-box h5 a{
+	color: #fff; 
+}
+.key-fund-features .inner-box:hover h5 a{
+	color: #010101;
+}
+.key-fund-features .inner-container .service-block {border-right: 0;}
+.key-fund-features .inner-container{border: 0;}
+.key-fund-features .inner-container .service-block:not(:last-child){
+	padding-right: 10px;
+}
+@media screen and (max-width: 991px){
+	.key-fund-features .inner-container .service-block:not(:last-child){
+		padding-right: unset;
+	}
+	.key-fund-features .inner-container .service-block {border-right: 1px solid #ebebeb;}
+}
+
 .fund-objectives li{
 	display: flex; align-items: flex-start;
 }
@@ -2425,6 +2468,7 @@ img{
 	display: flex; align-items: center; justify-content: center;
 	text-align: center;
 	background-color: var(--primary-color);
+	min-height: 152px;
 
 }
 .investment-approach .inner-box h3{
@@ -2453,6 +2497,15 @@ img{
 }
 .investment-philosophy ul li strong{
 	color: #737373;	
+}
+
+.quote-box{
+	font-size: 24px;
+	font-weight: 500;
+	line-height: 40px;
+}
+.quote-box span{
+	font-style: italic;
 }
 
 
@@ -5050,7 +5103,7 @@ img{
 
 .cta-content .title{
 	font-size: 30px;
-	line-height: 1;
+	line-height: 1.3;
 	font-weight: 400;
 	color: #ffffff;
 	margin-bottom: 15px;
