--- a/css/main.css
+++ b/css/main.css
@@ -470,7 +470,7 @@ img{
 	text-align:center;
 	z-index:100;
 	cursor:pointer;
-	background:#0a0a0a;
+	background:var(--primary-color);
 	display:none;
 	-webkit-transition:all 300ms ease;
 	-ms-transition:all 300ms ease;
@@ -1300,7 +1300,7 @@ img{
 	font-size: 40px;
 	line-height: 50px;
 	cursor: pointer;
-	color:#222222;
+	color:var(--primary-color);
 	display: none;
 	transition: all 500ms ease;
 	-moz-transition: all 500ms ease;
@@ -2091,7 +2091,7 @@ img{
 
 .about-section .inner-container{
 	position:relative;
-	padding-bottom:100px;
+	padding-bottom:60px;
 	border-bottom:1px solid #c0c8cd;
 }
 
@@ -2434,12 +2434,15 @@ img{
 .key-fund-features .inner-box:hover h5 a{
 	color: #010101;
 }
-.key-fund-features .inner-container .service-block {border-right: 0;}
+.key-fund-features .inner-container .service-block {border-right: 0;border-bottom: 0;}
 .key-fund-features .inner-container{border: 0;}
 .key-fund-features .inner-container .service-block:not(:last-child){
 	padding-right: 10px;
 }
 @media screen and (max-width: 991px){
+	.key-fund-features .inner-container .service-block{
+		border-bottom:1px solid #ebebeb;
+	}
 	.key-fund-features .inner-container .service-block:not(:last-child){
 		padding-right: unset;
 	}
@@ -2469,7 +2472,11 @@ img{
 	text-align: center;
 	background-color: var(--primary-color);
 	min-height: 152px;
-
+}
+@media screen and (max-width: 991px){
+	.investment-approach ul{
+		margin-top: 18px;
+	}
 }
 .investment-approach .inner-box h3{
 	font-size: 22px; font-weight: 600;
@@ -2477,7 +2484,7 @@ img{
 }
 
 .investment-approach ul li{
-	list-style-type:decimal-leading-zero !important;
+	list-style-type:disc !important
 }
 .investment-approach ul li p{
 	font-size: 16px;
@@ -2490,7 +2497,7 @@ img{
 }
 
 .investment-philosophy ul li{
-	font-size: 16px;
+	font-size: 18px;
 	font-weight: 400;
 	line-height: 26px;
 	color: #666666;
@@ -3298,7 +3305,6 @@ img{
 	line-height:1.2em;
 	margin-top:25px;
 	margin-bottom:25px;
-	text-transform:capitalize;
 }
 
 .main-footer .logo-widget{
